--- a/help.html
+++ b/help.html
@@ -31,29 +31,55 @@
 
 <body class="bg-slate-50 text-slate-900">
 
-<!-- NAVBAR -->
 <nav class="glass-nav sticky top-4 z-[1000]">
   <div class="flex items-center justify-between px-6 py-4">
-    <img src="./img/logo.png" alt="Academixsuite" class="h-16"/>
 
+    <!-- Logo -->
+    <img src="./img/logo.png" alt="Academixsuite" class="h-16 w-auto object-contain"/>
+
+    <!-- Desktop Links -->
     <div class="hidden lg:flex space-x-10 font-semibold text-slate-600 uppercase text-xs tracking-widest">
-      <a href="index.html">Platform</a>
-      <a href="capabilities.html">Capabilities</a>
-      <a href="blog.html">Blog</a>
-      <a href="index.html#pricing">Pricing</a>
+      <a href="index.html" class="hover:text-blue-600">Platform</a>
+      <a href="capabilities.html" class="hover:text-blue-600">Capabilities</a>
+      <a href="blog.html" class="text-blue-600 font-bold">Blog</a>
+      <a href="index.html#pricing" class="hover:text-blue-600">Pricing</a>
     </div>
 
-    <button id="menu-btn" class="lg:hidden text-2xl">
+    <!-- Desktop CTA -->
+    <div class="hidden lg:flex items-center space-x-4">
+      <a href="#" class="text-sm font-bold">Log In</a>
+      <button class="bg-slate-900 text-white px-6 py-2.5 rounded-full font-bold hover:bg-blue-600 transition">
+        Get Demo
+      </button>
+    </div>
+
+    <!-- Hamburger Button -->
+    <button
+      id="menu-btn"
+      class="lg:hidden text-slate-800 text-2xl focus:outline-none"
+      aria-label="Toggle menu"
+    >
       <i class="fas fa-bars"></i>
     </button>
   </div>
 
-  <div id="mobile-menu" class="hidden lg:hidden px-6 pb-6 border-t">
-    <div class="flex flex-col space-y-4 uppercase text-xs tracking-widest">
-      <a href="index.html">Platform</a>
-      <a href="capabilities.html">Capabilities</a>
-      <a href="blog.html">Blog</a>
-      <a href="index.html#pricing">Pricing</a>
+  <!-- Mobile Menu -->
+  <div
+    id="mobile-menu"
+    class="hidden lg:hidden px-6 pb-6 pt-2 border-t border-slate-200"
+  >
+    <div class="flex flex-col space-y-5 font-semibold text-slate-700 uppercase text-xs tracking-widest">
+      <a href="index.html" class="hover:text-blue-600">Platform</a>
+      <a href="uses.html" class="hover:text-blue-600">Capabilities</a>
+      <a href="blog.html" class="text-blue-600 font-bold">Blog</a>
+      <a href="index.html#pricing" class="hover:text-blue-600">Pricing</a>
+
+      <div class="pt-4 border-t border-slate-200 flex flex-col space-y-4">
+        <a href="#" class="text-sm font-bold normal-case">Log In</a>
+        <button class="bg-slate-900 text-white py-3 rounded-full font-bold hover:bg-blue-600 transition">
+          Get Demo
+        </button>
+      </div>
     </div>
   </div>
 </nav>
