--- a/terms.html
+++ b/terms.html
@@ -40,7 +40,7 @@
       <a href="index.html" class="hover:text-blue-600">Platform</a>
       <a href="capabilities.html" class="hover:text-blue-600">Capabilities</a>
       <a href="blog.html" class="hover:text-blue-600">Blog</a>
-      <a href="index.html#pricing" class="hover:text-blue-600">Pricing</a>
+      <a href="pricingpage.html" class="hover:text-blue-600">Pricing</a>
     </div>
 
     <div class="hidden lg:flex items-center space-x-4">
