--- a/blog.html
+++ b/blog.html
@@ -36,23 +36,50 @@
 </head>
 
 <body>
-
 <!-- NAVBAR -->
-<nav class="glass-nav sticky top-4 flex items-center justify-between px-6 py-4 z-[1000]">
-  <img src="./img/logo.png" alt="Academixsuite" class="h-16 w-auto object-contain"/>
+<nav class="glass-nav sticky top-4 z-[1000]">
+  <div class="flex items-center justify-between px-6 py-4">
 
-  <div class="hidden lg:flex space-x-10 font-semibold text-slate-600 uppercase text-xs tracking-widest">
-    <a href="#index.html" class="hover:text-blue-600">Platform</a>
-    <a href="capabilities" class="hover:text-blue-600">Capabilities</a>
-    <a href="#blog.html" class="text-blue-600 font-bold">Blog</a>
-    <a href="#pricingpage.html" class="hover:text-blue-600">Pricing</a>
+    <!-- Logo -->
+    <img src="./img/logo.png" alt="Academixsuite" class="h-14 w-auto object-contain"/>
+
+    <!-- Desktop Menu -->
+    <div class="hidden lg:flex space-x-10 font-semibold text-slate-600 uppercase text-xs tracking-widest">
+      <a href="index.html" class="hover:text-blue-600">Platform</a>
+      <a href="capabilities.html" class="hover:text-blue-600">Capabilities</a>
+      <a href="blog.html" class="text-blue-600 font-bold">Blog</a>
+      <a href="pricingpage.html" class="hover:text-blue-600">Pricing</a>
+    </div>
+
+    <!-- Desktop Actions -->
+    <div class="hidden lg:flex items-center space-x-4">
+      <a href="loginpage.html" class="text-sm font-bold">Log In</a>
+      <button class="bg-slate-900 text-white px-6 py-2.5 rounded-full font-bold hover:bg-blue-600 transition">
+        Get Demo
+      </button>
+    </div>
+
+    <!-- Hamburger Button -->
+    <button id="menuBtn" class="lg:hidden text-2xl text-slate-800">
+      <i class="fas fa-bars"></i>
+    </button>
   </div>
 
-  <div class="hidden lg:flex items-center space-x-4">
-    <a href="#loginpage.html" class="text-sm font-bold">Log In</a>
-    <button class="bg-slate-900 text-white px-6 py-2.5 rounded-full font-bold hover:bg-blue-600 transition">
-      Get Demo
-    </button>
+  <!-- Mobile Menu -->
+  <div id="mobileMenu" class="hidden lg:hidden px-6 pb-6">
+    <div class="flex flex-col space-y-5 font-bold text-slate-700">
+      <a href="index.html" class="hover:text-blue-600">Platform</a>
+      <a href="capabilities.html" class="hover:text-blue-600">Capabilities</a>
+      <a href="blog.html" class="text-blue-600">Blog</a>
+      <a href="pricingpage.html" class="hover:text-blue-600">Pricing</a>
+
+      <hr>
+
+      <a href="loginpage.html" class="text-sm">Log In</a>
+      <button class="bg-slate-900 text-white py-3 rounded-full font-bold hover:bg-blue-600 transition">
+        Get Demo
+      </button>
+    </div>
   </div>
 </nav>
 
@@ -209,6 +236,65 @@
       </div>
 
     </div>
+<!-- NAVBAR -->
+<nav class="glass-nav sticky top-4 z-[1000]">
+  <div class="flex items-center justify-between px-6 py-4">
+
+    <!-- Logo -->
+    <img src="./img/logo.png" alt="Academixsuite" class="h-14 w-auto object-contain"/>
+
+    <!-- Desktop Menu -->
+    <div class="hidden lg:flex space-x-10 font-semibold text-slate-600 uppercase text-xs tracking-widest">
+      <a href="index.html" class="hover:text-blue-600">Platform</a>
+      <a href="capabilities.html" class="hover:text-blue-600">Capabilities</a>
+      <a href="blog.html" class="text-blue-600 font-bold">Blog</a>
+      <a href="pricingpage.html" class="hover:text-blue-600">Pricing</a>
+    </div>
+
+    <!-- Desktop Actions -->
+    <div class="hidden lg:flex items-center space-x-4">
+      <a href="loginpage.html" class="text-sm font-bold">Log In</a>
+      <button class="bg-slate-900 text-white px-6 py-2.5 rounded-full font-bold hover:bg-blue-600 transition">
+        Get Demo
+      </button>
+    </div>
+
+    <!-- Hamburger Button -->
+    <button id="menuBtn" class="lg:hidden text-2xl text-slate-800">
+      <i class="fas fa-bars"></i>
+    </button>
+  </div>
+
+  <!-- Mobile Menu -->
+  <div id="mobileMenu" class="hidden lg:hidden px-6 pb-6">
+    <div class="flex flex-col space-y-5 font-bold text-slate-700">
+      <a href="index.html" class="hover:text-blue-600">Platform</a>
+      <a href="capabilities.html" class="hover:text-blue-600">Capabilities</a>
+      <a href="blog.html" class="text-blue-600">Blog</a>
+      <a href="pricingpage.html" class="hover:text-blue-600">Pricing</a>
+
+      <hr>
+
+      <a href="loginpage.html" class="text-sm">Log In</a>
+      <button class="bg-slate-900 text-white py-3 rounded-full font-bold hover:bg-blue-600 transition">
+        Get Demo
+      </button>
+    </div>
+  </div>
+</nav>
+<script>
+  const menuBtn = document.getElementById("menuBtn");
+  const mobileMenu = document.getElementById("mobileMenu");
+  const icon = menuBtn.querySelector("i");
+
+  menuBtn.addEventListener("click", () => {
+    mobileMenu.classList.toggle("hidden");
+
+    icon.classList.toggle("fa-bars");
+    icon.classList.toggle("fa-times");
+  });
+</script>
+
 
     <!-- BOTTOM -->
     <div class="text-center pt-8 border-t border-slate-100">
