--- a/privacy.html
+++ b/privacy.html
@@ -1,24 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy | Academixsuite</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Pricing | Academixsuite</title>
 
-  <!-- Tailwind CDN -->
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Optional AOS (if you already use it) -->
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-<style>
-    body {
-      font-family: 'Plus Jakarta Sans', sans-serif;
-      background-color: #f8fafc;
-      color: #0f172a;
-    }
-    h1, h2, h3 {
-      font-family: 'Space Grotesk', sans-serif;
-    }
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&family=Space+Grotesk:wght@600;700&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome (CONNECTED) -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+  />
+
+  <style>
+    body { font-family: 'Plus Jakarta Sans', sans-serif; }
+    h1,h2,h3 { font-family: 'Space Grotesk', sans-serif; }
     .glass-nav {
       background: rgba(255,255,255,0.75);
       backdrop-filter: blur(20px);
@@ -30,6 +29,7 @@
     }
   </style>
 </head>
+
 <body>
 <!-- NAVBAR -->
 <nav class="glass-nav sticky top-4 z-[1000]">
@@ -43,7 +43,7 @@
       <a href="index.html" class="hover:text-blue-600">Platform</a>
       <a href="capabilities.html" class="hover:text-blue-600">Capabilities</a>
       <a href="blog.html" class="text-blue-600 font-bold">Blog</a>
-      <a href="index.html#pricing" class="hover:text-blue-600">Pricing</a>
+      <a href="pricingpage.html" class="hover:text-blue-600">Pricing</a>
     </div>
 
     <!-- Desktop CTA -->
@@ -71,9 +71,9 @@
   >
     <div class="flex flex-col space-y-5 font-semibold text-slate-700 uppercase text-xs tracking-widest">
       <a href="index.html" class="hover:text-blue-600">Platform</a>
-      <a href="capabilities.html" class="hover:text-blue-600">Capabilities</a>
+      <a href="uses.html" class="hover:text-blue-600">Capabilities</a>
       <a href="blog.html" class="text-blue-600 font-bold">Blog</a>
-      <a href="index.html#pricing" class="hover:text-blue-600">Pricing</a>
+      <a href="pricingpage.html" class="hover:text-blue-600">Pricing</a>
 
       <div class="pt-4 border-t border-slate-200 flex flex-col space-y-4">
         <a href="#" class="text-sm font-bold normal-case">Log In</a>
