--- a/uses.html
+++ b/uses.html
@@ -70,7 +70,7 @@
   >
     <div class="flex flex-col space-y-5 font-semibold text-slate-700 uppercase text-xs tracking-widest">
       <a href="index.html" class="hover:text-blue-600">Platform</a>
-      <a href="capabilities.html" class="hover:text-blue-600">Capabilities</a>
+      <a href="uses.html" class="hover:text-blue-600">Capabilities</a>
       <a href="blog.html" class="text-blue-600 font-bold">Blog</a>
       <a href="index.html#pricing" class="hover:text-blue-600">Pricing</a>
 
